--- a/eCommerce/DataAccess/DataAccess.csproj
+++ b/eCommerce/DataAccess/DataAccess.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="CRUD\" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.4" />
+    <ProjectReference Include="..\Entities-DTOs\Entities-DTOs.csproj" />
   </ItemGroup>
 
 </Project>
